[package]
name = "ndjson"
version = "0.2.0"
edition = "2018"
description = "Formats and colorizes newline delimited JSON for better readability."
readme = "README.md"
repository = "https://github.com/rojul/ndjson"
license = "MIT"

[dependencies]
atty = "0.2"
clap = "3.0.0-beta.5"
serde_json = { version = "1.0", features = ["preserve_order"] }
termcolor = "1.1"

[profile.release]
lto = true
